# GameOfLife_DT

./: CMakeLists.txt  main.cpp  run.sh
